src/main/java/application/testData/invalidRandomAddresses/medium/RandomAddressesWithTypos.java
package application.testData.invalidRandomAddresses.medium;

public class RandomAddressesWithTypos {
}
